fix arbre remarquable